containers/kubernetes/integrations/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrations
  namespace: nrocinu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrations
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: /metrics
      labels:
        app: integrations
    spec:
      containers:
        - name: integrations
          image: registry.optirec.ml/integrations:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
