containers/kubernetes/integrations/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: integrations
    namespace: nrocinu
spec:
    selector:
        app: integrations
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: http
